k3s/traefik-manifests/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web # websecure
  routes:
    - match: Host('traefik.local.poddle.uz')
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
